# AldotaiBot-satori

./: .pdm-python  README.md  pyproject.toml
src/aldotaibot_satori/: __init__.py  __main__.py  config.yaml  server.py
src/aldotaibot_satori/plugins/: AutoAcceptRequest.py  ChatGPT.py  KeywordReply.py  Welcome.py  __init__.py
src/aldotaibot_satori/res/: 黑话解释.py
src/aldotaibot_satori/utils/: global_var.py  plugin_loader.py  setting.py
