[project]
name = "AldotaiBot-satori"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kaesinol", email = "keiplyer@gmail.com"},
]
dependencies = [
    "satori-python>=0.11.4",
    "arclet-entari>=0.1.0",
    "pydantic>=2.6.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
